Fixed empty array error message and left aligned fields now.

--- a/system/modules/isotope/html/backend.css
+++ b/system/modules/isotope/html/backend.css
@@ -57,3 +57,8 @@ h3.inherit,
 	padding-bottom: 1px;
 	vertical-align: middle;
 }
+
+#tl_product_quick_edit th
+{
+	text-align: left;
+}
